Fix some spelling and spacing issues in index; Fix subheadings and spacing issues on css

--- a/css/main.css
+++ b/css/main.css
@@ -3,31 +3,36 @@ html {
   font-family: Georgia, Serif;
   line-height: 1.5;
 }
+
 img {
   width: 100%;
 }
-h1, h2 {
-  color: #5d8432;
-  }
-h2 {
-  text-transform: uppercase;
+
+h1 {
+color: #5d8432;
+text-transform: uppercase;
 }
+
 figcaption {
   font-style: italic;
   text-align: center;
   font-size: 1rem;
 }
+
 a:link {
   color: #793284;
   font-weight: bold;
   font-size: 1.125rem;
 }
+
 a:hover {
   color: #b42885;
 }
+
 h2, nav {
   font-family: 'Patua One', cursive;
 }
+
 .hadro {
   font-size: 1.5rem;
 }
